[gd_scene load_steps=81 format=2]

[ext_resource path="res://assets/sprites/New_Assets/Player_Run_LR.png" type="Texture" id=1]
[ext_resource path="res://src/entities/Player.gd" type="Script" id=2]
[ext_resource path="res://src/entities/PlayerActionSM.gd" type="Script" id=3]
[ext_resource path="res://src/entities/WorldModeSM.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/Aim.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/New_Assets/Player_Idle_Flair.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/New_Assets/Player_Run_Down.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/New_Assets/Player_Run_Up.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/New_Assets/Player_Slash.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/New_Assets/Player_Gun_Up.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/New_Assets/Player_Gun_Down.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/New_Assets/Player_Gun_LR.png" type="Texture" id=12]

[sub_resource type="SphereShape" id=2]
radius = 1.93548

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.7, 0.8, 1.5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 11 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 10 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 288, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 336, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 12 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 9 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "shoot down",
"speed": 10.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "run_up",
"speed": 10.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "shoot_up",
"speed": 10.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "run_down",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "idle_with_gun",
"speed": 10.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CameraRotator" type="Spatial" parent="."]
visible = false

[node name="Camera" type="Camera" parent="CameraRotator"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 32, 0 )
projection = 1
current = true
size = 32.0
near = 0.01

[node name="PlayerActionSM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="WorldModeSM" type="Node" parent="."]
script = ExtResource( 4 )

[node name="HitBox" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.865734, 0 )

[node name="CollisionShape" type="CollisionShape" parent="HitBox"]
shape = SubResource( 2 )

[node name="Aim" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.106871, 1.4, 0 )
modulate = Color( 1, 1, 1, 0.670588 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -0.1 )
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.52822, 0 )
pixel_size = 0.1
frames = SubResource( 12 )
animation = "shoot"
frame = 1
playing = true

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="SFX" type="AudioStreamPlayer" parent="."]
